--- a/demo/index.css
+++ b/demo/index.css
@@ -1,12 +1,53 @@
+html {
+    height: 100%
+}
+
 body {
     margin: 0px;
+    height: 100%;
+}
+
+.root {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.north {
+    flex: 1;
+}
+
+.south {
+    height: 180px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    width: 100%;
+    overflow: auto;
 }
 
 .schema {
-    width: 100%;
-    height: 400px;
-    font-weight: bold;
+    width: 50%;
+    height: 100%;
+    font-size: 12px;
     color: green;
     background: #111;
     padding: 0px;
+    white-space: nowrap;
 }
+
+.auto-form {}
+
+.auto-form p {
+    border: 1px solid #eee;
+}
+
+.auto-form label {
+    font-weight: bold;
+    color: #555;
+    font-size: 12px;
+    min-width: 100px;
+    display: inline-block;
+}
+
+.auto-form input {}
